[package]
name = "github_skyline"
version = "0.1.0"
edition = "2025"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
clap = { version = "4.0", features = ["derive"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
colored = "2.0"
rand = "0.8"
regex = "1.0"
